--- a/app/src/main/res/layout/activity_form_setting.xml
+++ b/app/src/main/res/layout/activity_form_setting.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#F4F2F2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F4F2F2"
     tools:context=".form_Setting">
 
     <Button
@@ -13,9 +13,9 @@
         android:layout_width="80dp"
         android:layout_height="60dp"
         android:background="#00000000"
+        android:gravity="start"
         android:text=""
         app:icon="@drawable/left"
-        android:gravity="start"
         app:iconSize="35dp"
         app:iconTint="#FF7973"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,8 +59,8 @@
         android:layout_height="35dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
-        android:text=""
         android:backgroundTint="#D9D9D9"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,8 +70,8 @@
         android:layout_height="30dp"
         android:layout_marginTop="63dp"
         android:layout_marginEnd="54dp"
-        android:text=""
         android:backgroundTint="#9C9393"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -81,9 +81,9 @@
         android:layout_height="35dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
-        android:visibility="invisible"
-        android:text=""
         android:backgroundTint="#70E46C"
+        android:text=""
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -93,9 +93,9 @@
         android:layout_height="30dp"
         android:layout_marginTop="63dp"
         android:layout_marginEnd="20dp"
-        android:visibility="invisible"
-        android:text=""
         android:backgroundTint="#D8D3D3"
+        android:text=""
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -107,10 +107,10 @@
         android:layout_marginEnd="0dp"
         android:backgroundTint="#00000000"
         android:text=""
-        app:iconGravity="end"
         app:icon="@drawable/right"
-        app:iconTint="@color/black"
+        app:iconGravity="end"
         app:iconSize="35dp"
+        app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -177,8 +177,8 @@
         android:layout_height="35dp"
         android:layout_marginTop="210dp"
         android:layout_marginEnd="16dp"
-        android:text=""
         android:backgroundTint="#D9D9D9"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -188,8 +188,8 @@
         android:layout_height="30dp"
         android:layout_marginTop="212dp"
         android:layout_marginEnd="54dp"
-        android:text=""
         android:backgroundTint="#9C9393"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -199,9 +199,9 @@
         android:layout_height="35dp"
         android:layout_marginTop="210dp"
         android:layout_marginEnd="16dp"
-        android:visibility="invisible"
-        android:text=""
         android:backgroundTint="#70E46C"
+        android:text=""
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -211,88 +211,98 @@
         android:layout_height="30dp"
         android:layout_marginTop="212dp"
         android:layout_marginEnd="20dp"
-        android:visibility="invisible"
-        android:text=""
         android:backgroundTint="#D8D3D3"
+        android:text=""
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="220dp"
-        android:layout_height="112dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="201dp"
-        android:text=""
-
-        android:background="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/line4"
-        android:layout_width="220dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="256dp"
-        android:background="#ADADAD"
-        android:text=""
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtvietnamese"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="215dp"
-        android:text="Tếng Việt"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtEnglish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="270dp"
-        android:text="Tếng Anh"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnVietnamese"
-        android:layout_width="202dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="204dp"
-        android:backgroundTint="#00FFFFFF"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        app:icon="@drawable/done"
-        app:iconTint="@color/black"
-        app:iconGravity="end"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnEnglish"
-        android:layout_width="202dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="260dp"
-        android:backgroundTint="#00FFFFFF"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="20dp"
+        android:id="@+id/closelanguage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:visibility="invisible"
-        app:icon="@drawable/done"
-        app:iconTint="@color/black"
-        app:iconGravity="end"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/khunglanguage"
+        android:layout_width="250dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="45dp"
+        android:background="@color/white"
+        android:text=""
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cdlangue" />
+
+    <TextView
+        android:id="@+id/linelanguage"
+        android:layout_width="250dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="67dp"
+        android:layout_marginEnd="0dp"
+        android:background="@color/black"
+        android:visibility="invisible"
+        android:text=""
+        app:layout_constraintEnd_toEndOf="@+id/khunglanguage"
+        app:layout_constraintTop_toTopOf="@+id/khunglanguage" />
+
+    <TextView
+        android:id="@+id/Vietnamese"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="22dp"
+        android:visibility="invisible"
+        android:text="Tiếng Việt"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="@+id/khunglanguage"
+        app:layout_constraintTop_toTopOf="@+id/khunglanguage" />
+
+
+    <TextView
+        android:id="@+id/English"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="92dp"
+        android:visibility="invisible"
+        android:text="Tiếng Anh"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="@+id/khunglanguage"
+        app:layout_constraintTop_toTopOf="@+id/khunglanguage" />
+
+    <Button
+        android:id="@+id/openvietnamese"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        app:icon="@drawable/done"
+        android:background="#00000000"
+        app:iconGravity="end"
+        android:visibility="invisible"
+        app:iconSize="25dp"
+        app:iconTint="#000"
+        app:layout_constraintEnd_toEndOf="@+id/khunglanguage"
+        app:layout_constraintTop_toTopOf="@+id/khunglanguage" />
+
+    <Button
+        android:id="@+id/openEnglish"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="0dp"
+        android:background="#00000000"
+        app:icon="@drawable/done"
+        android:visibility="invisible"
+        app:iconGravity="end"
+        app:iconSize="25dp"
+        app:iconTint="#000"
+        app:layout_constraintEnd_toEndOf="@+id/khunglanguage"
+        app:layout_constraintTop_toTopOf="@+id/khunglanguage" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
